Revision history for CPAN-Meta-Prereqs-Filter

{{$NEXT}}
          - Add an explicit dependency on CPAN::Meta::Prereqs

0.004     2015-09-20 23:59:13+02:00 Europe/Amsterdam
          Update Module::CoreList dependency to 5.021

0.003     2015-08-01 12:05:54+02:00 Europe/Amsterdam
          Fix version normalization

0.002     2015-03-01 02:05:56+01:00 Europe/Amsterdam
          s/sanatize/sanitize/

0.001     2015-02-25 01:18:50+01:00 Europe/Amsterdam
          Initial release to an unsuspecting world