@@ -2,6 +2,7 @@ Revision history for CPAN-Meta-Prereqs-Filter
 
 {{$NEXT}}
           - Add an explicit dependency on CPAN::Meta::Prereqs
+          - Make sanatize also clear build/test deps from develop
 
 0.004     2015-09-20 23:59:13+02:00 Europe/Amsterdam
           Update Module::CoreList dependency to 5.021
